# MedSeg

./: .gitignore  README.md  desktop.ini  dockerfile  pyproject.toml  requirements.txt  train.sh
config/Task01_BrainTumour/: 2d_axi.py  2d_cor.py  2d_sag.py  3d_fullres.py
docs/benchmarks/: README.md
src/: base_train.py  benchmark.py  config.py  dataset.py  eval.py  export.py  loss.py  model.py  optim.py  predict.py  quantize.py  report.py  serve.py  summary.py  train.py  transforms.py  utils.py
